--- a/3.html
+++ b/3.html
@@ -2,32 +2,46 @@
 <html>
 
 <head>
-    <title>Hello World!-JavaScript</title>
+    <title>Hello World! - JavaScript</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
+
     <h1><a href="index.html">HOME</a></h1>
-    <ul>
-        <li><a href="1.html">1. HTML</a></li>
-        <li><a href="2.html">2. CSS</a></li>
-        <li><a href="3.html">3. JavaScript</a></li>
-    </ul>
-
-    <ul>
-        <li>lee</li>
-        <li>kim</li>
-        <li>park</li>
-    </ul>
+    <div id="grid">
+        <ul>
+            <li><a href="1.html">1. HTML</a></li>
+            <li><a href="2.html">2. CSS</a></li>
+            <li><a href="3.html" style="color: blue;">3. JavaScript</a></li>
+        </ul>
 
 
-    <h2>JavaScript </h2><br><br><br>
-    <p>JavaScript</p>
-    <p>for <strong>creating <u>web</u> pages</strong> and web applications.for <strong>creating <u>web</u>
-            pages</strong>
-        and web applications.for <strong>creating <u>web</u> pages</strong> and web applications.for <strong>creating
-            <u>web</u> pages</strong> and web applications.for <strong>creating <u>web</u> pages</strong> and web
-        applications.for <strong>creating <u>web</u> pages</strong> and web applications.</p>
+        <div id="article">
+            <h2>JavaScript</h2><br><br>
+            JavaScript (/ˈdʒɑːvəskrɪpt/),[10] often abbreviated JS, is a programming language that is one of the core
+            technologies of the World Wide Web, alongside HTML and CSS.[11] Over 97% of websites use JavaScript on the
+            client side for web page behavior,[12] often incorporating third-party libraries.[13] All major web browsers
+            have a dedicated JavaScript engine to execute the code on users' devices.
+
+            JavaScript is a high-level, often just-in-time compiled language that conforms to the ECMAScript
+            standard.[14] It has dynamic typing, prototype-based object-orientation, and first-class functions. It is
+            multi-paradigm, supporting event-driven, functional, and imperative programming styles. It has application
+            programming interfaces (APIs) for working with text, dates, regular expressions, standard data structures,
+            and the Document Object Model (DOM).
+
+            The ECMAScript standard does not include any input/output (I/O), such as networking, storage, or graphics
+            facilities. In practice, the web browser or other runtime system provides JavaScript APIs for I/O.
+
+            JavaScript engines were originally used only in web browsers, but are now core components of some servers
+            and a variety of applications. The most popular runtime system for this usage is Node.js.
+
+            Although Java and JavaScript are similar in name, syntax, and respective standard libraries, the two
+            languages are distinct and differ greatly in design.
+        </div>
+    </div>
 </body>
 
 </html>
