--- a/index.html
+++ b/index.html
@@ -4,35 +4,26 @@
 <head>
     <title>Hello World!</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
     <h1><a href="index.html">HOME</a></h1>
-    <ul>
-        <li><a href="1.html">1. HTML</a></li>
-        <li><a href="2.html">2. CSS</a></li>
-        <li><a href="3.html">3. JavaScript</a></li>
-    </ul>
-
-    <ul>
-        <li>lee</li>
-        <li>kim</li>
-        <li>park</li>
-    </ul>
+    <div id="grid">
+        <ul>
+            <li><a href="1.html">1. HTML</a></li>
+            <li><a href="2.html">2. CSS</a></li>
+            <li><a href="3.html">3. JavaScript</a></li>
+        </ul>
 
 
-    <h2>Hello World! </h2><br><br><br>
-    <p>Hypertext Markup Language (HTML) if the standard markup
-        languageHypertext Markup Language (HTML) if the standard markup
-        languageHypertext Markup Language (HTML) if the standard markup
-        languageHypertext Markup Language (HTML) if the standard markup
-        languageHypertext Markup Language (HTML) if the standard markup
-        language</p>
-    <p>for <strong>creating <u>web</u> pages</strong> and web applications.for <strong>creating <u>web</u>
-            pages</strong>
-        and web applications.for <strong>creating <u>web</u> pages</strong> and web applications.for <strong>creating
-            <u>web</u> pages</strong> and web applications.for <strong>creating <u>web</u> pages</strong> and web
-        applications.for <strong>creating <u>web</u> pages</strong> and web applications.</p>
+        <div id="article">
+            <h2>Hello World! </h2><br><<<<<<<br>
+            Click article name you want to read.
+            
+        </div>
+    </div>
 </body>
 
 </html>
